--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,18 @@
     display: none;
   }
 
+
+  @font-face {
+    font-family: "Bebas Neue";
+    src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
+      url("../fonts/BebasNeueRegular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+
+
   *{
       box-sizing: border-box;
   }
@@ -410,3 +422,79 @@
     color: #FFFFFF;
     text-decoration: none;
   }
+
+  .main
+  {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding-top: 60px;
+      display: flex;
+  }
+
+  .home-image path
+  {
+      opacity: 0;
+      cursor: pointer;
+  }
+
+  .home-image path:hover
+  {
+      opacity: 1;
+  }
+
+  .main-info
+  {
+      flex-grow: 1;
+       text-align: center;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: space-between;
+}
+
+.main-title
+{
+    margin: 0;
+    font-family: "Bebas Neue";
+    font-weight: normal;
+    font-size: 37px;
+    line-height: 44px;
+    text-transform: uppercase;
+    color: #635854;
+}
+
+.counter-group
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.counter-button
+{
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.counter-arrow-down
+{
+    transform: rotate(180deg);
+}
+
+.counter
+{
+    font-family: "Bebas Neue";
+    color:  #635854;
+    font-size: 120px;
+}
+
+.button-primary
+{
+    background: #3596F5;
+    border-radius: 6px;
+    color: #fff;
+    border: none;
+    padding: 16px 16px;
+    cursor: pointer;
+}
