--- a/css/style.css
+++ b/css/style.css
@@ -503,3 +503,105 @@
     padding: 16px 16px;
     cursor: pointer;
 }
+
+.modal
+{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 0.2s;
+}
+
+.is-open
+{
+  opacity: 1;
+  transform: scale(1);
+}
+
+.modal-dialog
+{
+  position: relative;
+  max-width: 1000px;
+  min-height: 565px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+}
+
+.modal-image
+{
+  background: #EBEBEB;
+  width: 60%;
+  text-align: center;
+  padding: 50px;
+}
+
+.modal-title
+{
+  font-family: "Bebas Neue";
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.modal-info
+{
+  width: 40%;
+  padding: 50px 46px;
+}
+
+.flat-list
+{
+  list-style: none;
+  padding-left: 0;
+  margin-top: 55px;
+}
+
+.flat-item
+{
+  margin-bottom: 10px;
+}
+
+.flat-link
+{
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  transition: 0.25s;
+}
+
+.flat-link:hover
+{
+  color: #3596F5;
+  text-decoration: underline;
+}
+
+.modal-alert
+{
+  font-style: italic;
+  font-size: 16px;
+  line-height: 19px;
+  color: #635854;
+  margin-top: 56px;
+}
+
+.modal-close-button
+{
+  position: absolute;
+  top: 38px;
+  right: 27px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
